Fix an articificial header height to avoid a scrollbar being generated

--- a/src/react-data-grid.css
+++ b/src/react-data-grid.css
@@ -13,6 +13,7 @@
 **/
 .react-grid-HeaderRow {
   font      : 0.85rem/1.0rem SansBold, sans-serif;
+  height    : 64px;
 }
 
 .react-grid-Cell__value {
